--- a/app/src/main/res/layout/checkavailability2.xml
+++ b/app/src/main/res/layout/checkavailability2.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/ww">
 
     <EditText
-        android:id="@+id/ci"
+        android:id="@+id/Cno"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.246" />
 
     <EditText
-        android:id="@+id/textcontact"
+        android:id="@+id/Cv"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -83,7 +83,7 @@
         app:layout_constraintVertical_bias="0.38" />
 
     <EditText
-        android:id="@+id/ad"
+        android:id="@+id/Nam"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -118,7 +118,7 @@
         app:layout_constraintVertical_bias="0.522" />
 
     <EditText
-        android:id="@+id/ch"
+        android:id="@+id/Ed"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="72dp"
