--- a/app/src/main/res/layout/makereservation3.xml
+++ b/app/src/main/res/layout/makereservation3.xml
@@ -95,7 +95,7 @@
         app:layout_constraintVertical_bias="0.697" />
 
     <EditText
-        android:id="@+id/textcontact"
+        android:id="@+id/Cv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
