--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -40,7 +40,7 @@
         app:layout_constraintVertical_bias="0.642" />
 
     <EditText
-        android:id="@+id/Cno"
+        android:id="@+id/CnoID"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Rid" />
 
     <EditText
-        android:id="@+id/Cv"
+        android:id="@+id/CvcID"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -72,10 +72,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Nam" />
+        app:layout_constraintTop_toBottomOf="@+id/NamID" />
 
     <EditText
-        android:id="@+id/Ed"
+        android:id="@+id/EdayID"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -90,11 +90,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Cv"
+        app:layout_constraintTop_toBottomOf="@+id/CvcID"
         app:layout_constraintVertical_bias="0.006" />
 
     <EditText
-        android:id="@+id/Nam"
+        android:id="@+id/NamID"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -108,7 +108,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Cno" />
+        app:layout_constraintTop_toBottomOf="@+id/CnoID" />
 
     <Button
         android:id="@+id/insertbtn"
@@ -125,7 +125,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Ed"
+        app:layout_constraintTop_toBottomOf="@+id/EdayID"
         app:layout_constraintVertical_bias="0.15" />
 
     <TextView
