--- a/app/src/main/res/layout/adddetails1.xml
+++ b/app/src/main/res/layout/adddetails1.xml
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.268" />
 
     <EditText
-        android:id="@+id/co"
+        android:id="@+id/textcontact"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -141,7 +141,7 @@
         app:layout_constraintVertical_bias="0.729" />
 
     <EditText
-        android:id="@+id/co"
+        android:id="@+id/textcontact"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="72dp"
