--- a/app/src/main/res/layout/adddetails2.xml
+++ b/app/src/main/res/layout/adddetails2.xml
@@ -36,7 +36,7 @@
     ]]>
 
     <EditText
-        android:id="@+id/co"
+        android:id="@+id/textcontact"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
