--- a/app/src/main/res/layout/checkavailability2.xml
+++ b/app/src/main/res/layout/checkavailability2.xml
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.246" />
 
     <EditText
-        android:id="@+id/co"
+        android:id="@+id/textcontact"
         android:layout_width="178dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
