change interface designs

--- a/app/src/main/res/layout/makeresrvation1.xml
+++ b/app/src/main/res/layout/makeresrvation1.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/button"
         android:text="Book Now"
+        android:textColor="#FDFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +61,7 @@
         android:background="@drawable/button"
         android:text="@string/reception_2"
         android:textAlignment="center"
-        android:textColor="#1D2222"
+        android:textColor="#FDFBFB"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +99,7 @@
         android:background="@drawable/button"
         android:text="@string/reception_2"
         android:textAlignment="center"
-        android:textColor="#1D2222"
+        android:textColor="#FDFBFB"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +118,7 @@
         android:background="@drawable/button"
         android:text="@string/reception_1"
         android:textAlignment="center"
-        android:textColor="#1D2222"
+        android:textColor="#FDFBFB"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +172,7 @@
         android:background="@drawable/button"
         android:text="@string/reception_2"
         android:textAlignment="center"
-        android:textColor="#1D2222"
+        android:textColor="#FDFBFB"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -212,16 +213,16 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="233dp"
-        android:layout_height="61dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/backgroundhome"
+        android:background="@drawable/button"
         android:text="@string/make_reservation"
         android:textAlignment="center"
-        android:textColor="#0C0B0B"
+        android:textColor="#FDFBFB"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
