--- a/app/src/main/res/layout/makeresrvation1.xml
+++ b/app/src/main/res/layout/makeresrvation1.xml
@@ -58,7 +58,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
+        android:background="@color/purpel"
         android:text="@string/reception_2"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
@@ -96,8 +96,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
-        android:text="@string/reception_2"
+        android:background="@color/purpel"
+        android:text="Reception1"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
         android:textSize="18sp"
@@ -115,7 +115,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
+        android:background="@color/purpel"
         android:text="@string/reception_1"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
@@ -169,7 +169,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
+        android:background="@color/purpel"
         android:text="@string/reception_2"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
@@ -219,16 +219,17 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
+        android:background="@color/purpel"
         android:text="@string/make_reservation"
         android:textAlignment="center"
         android:textColor="#FDFBFB"
-        android:textSize="18sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
+        app:layout_constraintVertical_bias="0.117" />
 
     <View
         android:id="@+id/divider8"
