--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#C590A3</color>
 
 
-    <color name="Darkblue">#1B1063</color>
+    <color name="Darkblue">#000000</color>
     <color name="white">#F5F9F9</color>
     <color name="light_gray">#E8EBEC</color>
     <color name="purpel">#BC1FF9</color>
